--- a/style.css
+++ b/style.css
@@ -8,7 +8,14 @@
 }
 
 body {
-  background-color: rgb(29, 88, 49);
+  font-family: 'Varela Round', sans-serif;
+	line-height: 1.6;
+	color: #3a3a3a;
+	margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
 }
 
 h2 {
@@ -30,7 +37,7 @@ p {
   border: none;
   border-radius: 5%;
   color: white;
-  height: 100%;
+  height: 50%;
   width: 100%;
   text-align: center;
   text-decoration: none;
@@ -63,33 +70,54 @@ p {
 }
 
 .container {
-  flex-direction: column;
+  font-size: 1.3em;
+  margin: 0;
+  text-align: center;
+  display: block;
+}
+.main-body {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  flex: 1;
+  margin: 0 auto;
 }
+
 .tall-container {
   flex-direction: column;
-  height: 75vh;
-  display: flex;
+}
+
+.container-box-english,
+.container-box-russian {
+  padding: 10px 15px;
   justify-content: space-evenly;
-  align-items: center;
 }
 
-.box {
-  width: 40vw;
-  height: 38%;
-  border-radius: 6%;
+.main-footer {
+  background: #d9e4ea;
+	padding: 2em 0;
+  margin-top: 30px;
 }
 
-@media (min-width: 670px) {
+
+/* ================================= 
+  Media Queries
+==================================== */
+
+@media (min-width: 700px) {
+  .main-body,
   .tall-container {
+    display: flex; 
     flex-direction: row;
   }
+}
 
-  .box {
-    width: 45%;
-    max-width: 328.5px;
-    height: 45vh;
-  }
+@media (min-width: 1025px) {
+
+	.main-header {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
 }
